tests/errors/toml_encode_not_table.dang
print(TOML.encode([1, 2, 3]))
